[tool.poetry]
name = "sc-crawler"
version = "1.2.0"
description = "Distributed crawler servie for Scrapy-Cluster"
authors = ["Ivan Bakalov <ibbakalov@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "~2.7.1"
attrs = "16.3.0"
cffi = "1.9.1"
ConcurrentLogHandler = "0.9.1"
cryptography = "^2.9.2"
cssselect = "1.0.1"
enum34 = "1.1.6"
funcsigs = "1.0.2"
future = "0.16.0"
idna = "2.5"
ipaddress = "1.0.18"
kafka-python = "1.3.3"
kazoo = "2.2.1"
lxml = "3.7.3"
mock = "2.0.0"
nose = "1.3.7"
parsel = "1.1.0"
pbr = "2.0.0"
pyasn1 = "0.2.3"
pyasn1-modules = "0.0.8"
pycparser = "2.17"
PyDispatcher = "2.0.5"
pyOpenSSL = "16.2.0"
python-json-logger = "0.1.7"
PyYAML = "3.12"
queuelib = "1.4.2"
redis = "2.10.5"
requests = "2.13.0"
requests-file = "1.4.1"
retrying = "1.3.3"
Scrapy = "1.3.3"
scutils = "1.2.0"
service-identity = "16.0.0"
six = "1.10.0"
testfixtures = "4.13.5"
tldextract = "2.0.2"
Twisted = "17.1.0"
ujson = "1.35"
w3lib = "1.17.0"
"zope.interface" = "4.3.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
