[tool.poetry]
name = "sc-redis-monitor"
version = "1.2.0"
description = "Distributed redis-monitor service for Scrapy-Cluster"
authors = ["Ivan Bakalov <ibbakalov@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "~2.7.1"
ConcurrentLogHandler = "0.9.1"
funcsigs = "1.0.2"
future = "0.16.0"
kafka-python = "1.3.3"
kazoo = "2.2.1"
mock = "2.0.0"
nose = "1.3.7"
pbr = "2.0.0"
python-json-logger = "0.1.7"
python-redis-lock = "3.2.0"
PyYAML = "3.12"
redis = "2.10.5"
retrying = "1.3.3"
scutils = "1.2.0"
six = "1.10.0"
testfixtures = "4.13.5"
ujson = "1.35"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
